--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.10",
+    "@angular/cdk": "^7.3.1",
     "@angular/cli": "^7.1.4",
-    "@angular/common": "^6.0.3",
+    "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
+    "@angular/core": "^6.1.10",
     "@angular/forms": "^6.0.3",
     "@angular/http": "^6.0.3",
+    "@angular/material": "^7.3.1",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
@@ -28,6 +30,7 @@
     "firebase": "^5.7.1",
     "font-awesome": "^4.7.0",
     "forms": "^1.3.0",
+    "hammerjs": "^2.0.8",
     "remove-node-modules": "^1.7.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
